syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.model";
option java_outer_classname = "UserProto";

message UserRpcDto {
}
