syntax = "proto3";

import "google/protobuf/empty.proto";
import "message/Player.proto";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.system";
option java_outer_classname = "ServerAuthProto";

service ServerAuthService {
  rpc Login (AuthDataRpcDto) returns (AuthDataRpcDto);
  rpc Logout (AuthDataRpcDto) returns (google.protobuf.Empty);
}

// It will be possible to obtain a token using a separate authentication service.
message AuthDataRpcDto {
    string token = 1;
}
